analysis/spring-framework/step_1/logs/2568-b65bfdb.log
Exception in thread "DisconnectableInputStream source reader" org.gradle.api.UncheckedIOException: java.io.IOException: Bad file descriptor
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:43)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:125)
	at java.lang.Thread.run(Thread.java:748)
Caused by: java.io.IOException: Bad file descriptor
	at java.io.FileInputStream.readBytes(Native Method)
	at java.io.FileInputStream.read(FileInputStream.java:255)
	at java.io.BufferedInputStream.fill(BufferedInputStream.java:246)
	at java.io.BufferedInputStream.read1(BufferedInputStream.java:286)
	at java.io.BufferedInputStream.read(BufferedInputStream.java:345)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:96)
	... 1 more
:buildSrc:compileJava NO-SOURCE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava NO-SOURCE
:buildSrc:compileTestGroovy NO-SOURCE
:buildSrc:processTestResources NO-SOURCE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test NO-SOURCE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-jcl:compileKotlin
:spring-jcl:compileJava
:spring-jcl:copyMainKotlinClasses
:spring-jcl:processResources NO-SOURCE
:spring-jcl:classes
:spring-jcl:jar
:spring-core:compileKotlin
:spring-core:compileJava
:spring-core:copyMainKotlinClasses
:spring-core:processResources NO-SOURCE
:spring-core:classes
:spring-core:jar
:spring-beans:compileKotlin
Using kotlin incremental compilation
:spring-beans:compileJava
:spring-beans:copyMainKotlinClasses
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileKotlin
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovy
:spring-beans-groovy:copyMainKotlinClasses
:spring-beans-groovy:processResources NO-SOURCE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileKotlin
:spring-aop:compileJava
:spring-aop:copyMainKotlinClasses
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileKotlin
:spring-expression:compileJava
:spring-expression:copyMainKotlinClasses
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileKotlin
:spring-instrument:compileJava
:spring-instrument:copyMainKotlinClasses
:spring-instrument:processResources NO-SOURCE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileKotlin
Using kotlin incremental compilation
:spring-context:compileJava
:spring-context:compileGroovy NO-SOURCE
:spring-context:copyMainKotlinClasses
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileKotlin
:spring-tx:compileJava
:spring-tx:copyMainKotlinClasses
:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileKotlin
Using kotlin incremental compilation
:spring-jdbc:compileJava
:spring-jdbc:copyMainKotlinClasses
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileKotlin
:spring-context-support:compileJava
:spring-context-support:copyMainKotlinClasses
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileKotlin
:spring-oxm:compileJava
:spring-oxm:copyMainKotlinClasses
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileKotlin
Using kotlin incremental compilation
:spring-web:compileJava
:spring-web:compileGroovy NO-SOURCE
:spring-web:copyMainKotlinClasses
:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileKotlin
:spring-orm:compileJava
:spring-orm:copyMainKotlinClasses
:spring-orm:processResources NO-SOURCE
:spring-orm:classes
:spring-orm:jar
:spring-aspects:compileKotlin
:spring-aspects:compileJava
:spring-aspects:copyMainKotlinClasses
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-beans-groovy:jar SKIPPED
:spring-beans-groovy:sourcesJar SKIPPED
:spring-beans-groovy:assemble
:spring-beans-groovy:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-indexer:compileKotlin
:spring-context-indexer:compileJava
:spring-context-indexer:copyMainKotlinClasses
:spring-context-indexer:processResources
:spring-context-indexer:classes
:spring-context-indexer:jar
:spring-context-indexer:sourcesJar
:spring-context-indexer:assemble
:spring-context-indexer:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-framework-bom:assemble UP-TO-DATE
:spring-framework-bom:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-jcl:sourcesJar
:spring-jcl:assemble
:spring-jcl:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-messaging:compileKotlin
:spring-messaging:compileJava
:spring-messaging:copyMainKotlinClasses
:spring-messaging:processResources NO-SOURCE
:spring-messaging:classes
:spring-messaging:jar
:spring-jms:compileKotlin
:spring-jms:compileJava
:spring-jms:copyMainKotlinClasses
:spring-jms:processResources
:spring-jms:classes
:spring-jms:jar
:spring-jms:sourcesJar
:spring-jms:assemble
:spring-jms:build
:spring-messaging:sourcesJar
:spring-messaging:assemble
:spring-messaging:build
:spring-orm:sourcesJar
:spring-orm:assemble
:spring-orm:build
:spring-oxm:sourcesJar
:spring-oxm:assemble
:spring-oxm:build
:spring-webflux:compileKotlin
Using kotlin incremental compilation
:spring-webflux:compileJava/home/ubuntu/bugs/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/config/WebFluxConfigurationSupport.java:67: error: package org.springframework.web.server.support does not exist
import org.springframework.web.server.support.HttpRequestPathHelper;
                                             ^
1 error
 FAILED
:spring-webflux:copyMainKotlinClasses SKIPPED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-webflux:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 31.78 secs
